Updated results with temperate countries, better plots

--- a/notebooks/main_results_original.ipynb
+++ b/notebooks/main_results_original.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Set Theano Environmental Variables for Parallelisation\n"
      ]
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Dropping NPI Mask Wearing\n",
       "Dropping NPI Travel Screen/Quarantine\n",
@@ -77,7 +77,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'gi_mean_mean': 5.06,\n",
@@ -94,8 +93,9 @@
        " 'cases_delay_disp_sd': 0.2689502951493133}"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -106,7 +106,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '62147' (I am process '62072')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /home/gavento/.theano/compiledir_Linux-5.4--generic-x86_64-with-glibc2.10-x86_64-3.8.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '62147' (I am process '62072')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /home/gavento/.theano/compiledir_Linux-5.4--generic-x86_64-with-glibc2.10-x86_64-3.8.5-64/lock_dir\n"
+     ]
+    }
+   ],
    "source": [
     "with ComplexDifferentEffectsModel(data) as model:\n",
     "    model.build_model(**bd)"
@@ -118,8 +129,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
@@ -128,18 +139,40 @@
      ]
     },
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n    <div>\n        <style>\n            /* Turns off some styling */\n            progress {\n                /* gets rid of default border in Firefox and Opera. */\n                border: none;\n                /* Needs to be in here for Safari polyfill so background images work as expected. */\n                background-size: auto;\n            }\n            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n                background: #F44336;\n            }\n        </style>\n      <progress value='0' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n      \n    </div>\n    "
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='10000' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [10000/10000 1:59:17<00:00 Sampling 4 chains, 11 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 500 tune and 2_000 draw iterations (2_000 + 8_000 draws total) took 12982 seconds.\n",
+      "Sampling 4 chains for 500 tune and 2_000 draw iterations (2_000 + 8_000 draws total) took 7167 seconds.\n",
+      "There were 11 divergences after tuning. Increase `target_accept` or reparameterize.\n",
       "The number of effective samples is smaller than 10% for some parameters.\n"
      ]
     }
@@ -184,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
