Add beta1 samples export, export current run

--- a/notebooks/main_results_plotter.ipynb
+++ b/notebooks/main_results_plotter.ipynb
@@ -164,7 +164,7 @@
     "    _ = trace['SeasonalityMultEffect']\n",
     "    WITH_SEASONALITY = True\n",
     "except KeyError:\n",
-    "    WITH_SEASONALITY = False    "
+    "    WITH_SEASONALITY = False"
    ]
   },
   {
@@ -182,7 +182,8 @@
    ],
    "source": [
     "if WITH_SEASONALITY:\n",
-    "    print(np.mean(trace['SeasonalityMultEffect'], axis=0))"
+    "    print(np.mean(trace['SeasonalityMultEffect'], axis=0))\n",
+    "    trace['Seasonality'].tofile(f\"{FN}-Seasonality.csv\")"
    ]
   },
   {
