Rename data file to reflect content

--- a/notebooks/main_results_plotter.ipynb
+++ b/notebooks/main_results_plotter.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
    "source": [
     "if WITH_SEASONALITY:\n",
     "    print(np.mean(trace['SeasonalityMultEffect'], axis=0))\n",
-    "    trace['Seasonality'].tofile(f\"{FN}-Seasonality.csv\")"
+    "    trace['Seasonality'].tofile(f\"{FN}-beta1_samples.csv\", sep=',')"
    ]
   },
   {
