Fix mobility: restrict to temperate europe, add compression

--- a/notebooks/merge_mobility.ipynb
+++ b/notebooks/merge_mobility.ipynb
@@ -33,7 +33,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "path = \"../d/Global_Mobility_Report.csv\"\n",
+    "path = \"../d/Global_Mobility_Report.csv.xz\"\n",
     "df = pd.read_csv(path, parse_dates=[\"date\"])\n",
     "\n",
     "# Filter to national \n",
@@ -56,15 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfb = pd.read_csv(\"../d/modelBrauner_dataBrauner.csv\", parse_dates=[\"Date\"])\n",
+    "dfb = pd.read_csv(\"../d/modelBrauner_dataBraunerTE.csv\", parse_dates=[\"Date\"])\n",
     "dfb = dfb.merge(nat, on=[\"Region Name\", \"Date\"], how=\"left\")\n",
     "dfb.fillna(0.0, inplace=True)\n",
     "MOBS = {\n",
-    "#    \"retail_and_recreation_percent_change_from_baseline\": \"Recre\",\n",
+    "    \"retail_and_recreation_percent_change_from_baseline\": \"Recre\",\n",
     "    \"grocery_and_pharmacy_percent_change_from_baseline\": \"Groc\",\n",
     "    \"transit_stations_percent_change_from_baseline\": \"Trans\",\n",
     "    \"workplaces_percent_change_from_baseline\": \"Work\",\n",
-    "#    \"residential_percent_change_from_baseline\": \"Resid\",\n",
+    "    \"residential_percent_change_from_baseline\": \"Resid\",\n",
     "    }\n",
     "mobility = np.mean([np.float32(dfb[m]) for m in MOBS], axis=0)\n",
     "mobility\n",
